clusters/k3s/apps/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarr
  namespace: docker-services
subsets:
  - addresses:
      - ip: 192.168.1.40
    ports:
      - port: 8989
        protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sonarr
  namespace: docker-services
  labels:
    kubernetes.io/service-name: sonarr
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.40
ports:
  - port: 8989
    protocol: TCP
